costomer.yaml
# hotel-customer cluster
---
kind: Service
apiVersion: v1
metadata:
  name: hotel-customer
  labels:
    app: hotel-customer
spec:
  selector:
    app: hotel-customer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hotel-customer
  labels:
    app: hotel-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-customer
  template:
    metadata:
      labels:
        app: hotel-customer
    spec:
      containers:
      - name: hotel-customer
        image: docker-registry.cluster.dfwsgroup.cn/library/wkxhotel-file:1.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hotel-customer-config
          mountPath: /config
      volumes:
      - name: hotel-customer-config
        configMap:
          name: hotel-customerconfig
