eureka.yaml
# eureka cluster
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-ext
  labels:
    app: eureka
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30163
    name: eureka
  type: NodePort
  selector:
    app: eureka
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: eureka
  clusterIP: None
  selector:
    app: eureka
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: eureka
  replicas: 3
  template:
    metadata:
      labels:
        app: eureka
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: eureka
        image: docker-registry.cluster.dfwsgroup.cn/library/wkxhotel-eureka-server:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        volumeMounts:
        - name: appconfig
          mountPath: /config
      volumes:
      - name: appconfig
        configMap:
          name: eureka
