service-statistics.yaml
# hotel-statistics cluster
---
kind: Service
apiVersion: v1
metadata:
  name: hotel-statistics
  labels:
    app: hotel-statistics
spec:
  selector:
    app: hotel-statistics
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hotel-statistics
  labels:
    app: hotel-statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-statistics
  template:
    metadata:
      labels:
        app: hotel-statistics
    spec:
      containers:
      - name: hotel-statistics
        image: docker-registry.cluster.dfwsgroup.cn/library/wkxhotel-service-statistics:1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hotel-statistics-config
          mountPath: /config
      volumes:
      - name: hotel-statistics-config
        configMap:
          name: hotel-statisticsconfig
