dfws-manage.yaml
# hotel-dfws-manage cluster
---
kind: Service
apiVersion: v1
metadata:
  name: hotel-dfws-manage
  labels:
    app: hotel-dfws-manage
spec:
  selector:
    app: hotel-dfws-manage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hotel-dfws-manage
  labels:
    app: hotel-dfws-manage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-dfws-manage
  template:
    metadata:
      labels:
        app: hotel-dfws-manage
    spec:
      containers:
      - name: hotel-dfws-manage
        image: docker-registry.cluster.dfwsgroup.cn/library/wkxhotel-dfws-manage:1.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hotel-dfws-manage-config
          mountPath: /config
      volumes:
      - name: hotel-dfws-manage-config
        configMap:
          name: hotel-dfws-manageconfig
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hotel-dfws-manage
  annotations:
    #kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  #tls:
  #- hosts:
  #  - hotel-dfws-manage.cluster.dfwsgroup.cn
  #  secretName: hotel-dfws-manage-tls
  rules:
  - host: manage.wkxhotel.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hotel-dfws-manage
          servicePort: 80
