service-customer.yaml
# hotel-customer cluster
---
kind: Service
apiVersion: v1
metadata:
  name: hotel-customer
  labels:
    app: hotel-customer
spec:
  selector:
    app: hotel-customer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: hotel-customer
  labels:
    app: hotel-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-customer
  template:
    metadata:
      labels:
        app: hotel-customer
    spec:
      containers:
      - name: hotel-customer
        image: docker-registry.cluster.dfwsgroup.cn/library/hotel-customer:1.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hotel-customer-config
          mountPath: /config
      volumes:
      - name: hotel-customer-config
        configMap:
          name: hotel-customerconfig
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hotel-customer
  annotations:
    #kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  #tls:
  #- hosts:
  #  - hotel-customer.cluster.dfwsgroup.cn
  #  secretName: hotel-customer-tls
  rules:
  - host: hotel-customer.cluster.dfwsgroup.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: hotel-customer
          servicePort: 80
