service-file.yaml
# service-file cluster
---
kind: Service
apiVersion: v1
metadata:
  name: service-file
  labels:
    app: service-file
spec:
  selector:
    app: service-file
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: service-file
  labels:
    app: service-file
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-file
  template:
    metadata:
      labels:
        app: service-file
    spec:
      containers:
      - name: service-file
        image: docker-registry.cluster.dfwsgroup.cn/library/service-file:1.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "300Mi"
            cpu: "250m"
          limits:
            memory: "2000Mi"
            cpu: "2000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: service-file-config
          mountPath: /config
      volumes:
      - name: service-file-config
        configMap:
          name: service-fileconfig
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-file
  annotations:
    #kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  #tls:
  #- hosts:
  #  - service-file.cluster.dfwsgroup.cn
  #  secretName: service-file-tls
  rules:
  - host: service-file.cluster.dfwsgroup.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: service-file
          servicePort: 80
